--- a/src/html/rootJs.html
+++ b/src/html/rootJs.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../css/index.css?t=<php echo time();>">
     <link rel="stylesheet" href="../css/StyleDepend/wall-e.css?t=<php echo time();>">
     <!-- js -->
-    <script type='text/javascript' src="../js/JsDepend/jQuery.min.js"></script>
-    <script type='text/javascript' src="../js/wall-e.js?t=<?php echo time();?>"></script>
+    <script  src="../js/JsDepend/jQuery.min.js" type="text/javascript"></script>
+    <script src="../js/wall-e.js?t=<?php echo time();?>" type="text/javascript"></script>
 </head>
 
 <body>
@@ -27,4 +27,4 @@
 
 </html>
     <!-- js -->
-    <script type='text/javascript' src="../js/index.js?t=<?php echo time();?>"></script>
+    <script src="../js/index.js?t=<?php echo time();?>" type="text/javascript"></script>
