--- a/src/html/rootJs.html
+++ b/src/html/rootJs.html
@@ -9,6 +9,7 @@
     <!-- css -->
     <link rel="stylesheet" href="../css/index.css?t=<php echo time();>">
     <link rel="stylesheet" href="../css/StyleDepend/wall-e.css?t=<php echo time();>">
+    <!-- <link rel="stylesheet" href="../css/StyleDepend/style.css?t=<php echo time();>"> -->
     <!-- js -->
     <script src="../js/JsDepend/jQuery.min.js" type="text/javascript"></script>
     <script src="../js/wall-e.js?t=<?php echo time();?>" type="text/javascript"></script>
@@ -20,9 +21,7 @@
         <div align="center">
             <h6>Wall E</h6>
         </div>
-        <div class="mokuai"></div>
-        <textarea style="color:red;" name="" id="demo" cols="30" rows="1" placeholder="ww"></textarea>
-
+        <div class="mokuai" style="width:100px;height:100px;background-color:red;"></div>
         <!-- <div id="ajaxloader1"></div>
 
         <div id="ajaxloader2">
